fix: mobile menu broken style

--- a/src/components/common/header/_header.scss
+++ b/src/components/common/header/_header.scss
@@ -115,6 +115,13 @@
 .header__mobileList {
   flex-direction: column;
   height: 100%;
+  --flow-gap: 1.5rem;
+}
+
+.header--close-button {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
 }
 
 .menuMobileIcon {
